Fix left sidebar flipped mascot and overflow

--- a/style.css
+++ b/style.css
@@ -663,7 +663,7 @@ body::after
 	background:" + $SS.mascot.img.get() + ";
 	content:'';
 	height:100%;
-	width:" + ($SS.mascot.overflow ? "" + ($SS.conf["Sidebar Position"] === 2 && $SS.mascot.flip ? "263px" : "100%") + "" : "263px") + ";
+	width:" + ($SS.mascot.overflow ? "100%" : "263px") + ";
 	" + (!$SS.mascot.small ? "background-size:contain;" : "") + "
     bottom:" + ($SS.conf["Navigation Bar Position"] !== 2 ? 0 : -1) + "px!important;
 	margin-bottom:" + $SS.mascot.offset + "px;
